added a custom list
with HashMap, key => value

--- a/Chatter/app/src/main/AndroidManifest.xml
+++ b/Chatter/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ChatterReciveActivity" />
-        <activity android:name=".ChatterSimpleListActivity"></activity>
+        <activity android:name=".ChatterSimpleListActivity" />
+        <activity android:name=".CustomListActivity"></activity>
     </application>
 
 </manifest>
