--- a/Chatter/app/src/main/AndroidManifest.xml
+++ b/Chatter/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         </activity>
         <activity android:name=".ChatterReciveActivity" />
         <activity android:name=".ChatterSimpleListActivity" />
-        <activity android:name=".CustomListActivity"></activity>
+        <activity android:name=".CustomListActivity" />
+        <activity android:name=".PrefsActivity"></activity>
     </application>
 
 </manifest>
