--- a/Lab_One_Oscar_Reviews/app/src/main/AndroidManifest.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/AndroidManifest.xml
@@ -16,6 +16,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".displayReviewActivity" />
+        <activity android:name=".prefsActivity"></activity>
     </application>
 
 </manifest>
