--- a/Lab_One_Oscar_Reviews/app/src/main/AndroidManifest.xml
+++ b/Lab_One_Oscar_Reviews/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ca.nait.adrantiev1.lab_one_oscar_reviews">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
