--- a/Week05/app/src/main/AndroidManifest.xml
+++ b/Week05/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ca.nait.adrantiev1.week05">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,8 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <service android:name=".GetterService"/>
-    </application>
 
+        <service android:name=".GetterService" />
+
+        <activity android:name=".ViewChatterActivity"></activity>
+    </application>
 
 </manifest>
