--- a/Week05/app/src/main/AndroidManifest.xml
+++ b/Week05/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
 
         <service android:name=".GetterService" />
 
-        <activity android:name=".ViewChatterActivity"></activity>
+        <activity android:name=".ViewChatterActivity" />
+        <activity android:name=".ChatterListActivity"></activity>
     </application>
 
 </manifest>
