create base class
Added menu to base class, and a way to return to home screen

--- a/Week05/app/src/main/AndroidManifest.xml
+++ b/Week05/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <service android:name=".GetterService" />
 
         <activity android:name=".ViewChatterActivity" />
-        <activity android:name=".ChatterListActivity"></activity>
+        <activity android:name=".ChatterListActivity" />
+        <activity android:name=".BaseActivity"></activity>
     </application>
 
 </manifest>
