widget for wifi and widget to track battery life

--- a/WidgetOne/app/src/main/AndroidManifest.xml
+++ b/WidgetOne/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
     package="ca.nait.adrantiev1.widgetone">
-
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <application
 
         android:icon="@mipmap/ic_launcher"
