--- a/TodoOrNot/app/src/main/AndroidManifest.xml
+++ b/TodoOrNot/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".EditContentActivity"></activity>
+        <activity android:name=".prefsActivity"></activity>
     </application>
 
 </manifest>
